--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "pinia": "^2.2.2",
         "vue": "^3.5.8",
+        "vue-router": "^4.4.5",
         "vuetify": "^3.7.2"
     },
     "devDependencies": {
