--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "format": "prettier --write src/"
     },
     "dependencies": {
+        "@we-gold/gpxjs": "^1.0.12",
+        "leaflet": "^1.9.4",
         "pinia": "^2.2.2",
         "vue": "^3.5.8",
         "vue-router": "^4.4.5",
