[HackYeah] Fixed chart update

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@we-gold/gpxjs": "^1.0.12",
+        "chart.js": "^4.4.4",
         "leaflet": "^1.9.4",
         "pinia": "^2.2.2",
         "vue": "^3.5.8",
